console-log.txt
$ npm start

> frontend@0.1.0 start
> craco start

Browserslist: browsers data (caniuse-lite) is 11 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme


Failed to compile.

SyntaxError: D:\Projects\trackless-video\neurobrand-trackless\src\components\TracklessVideoEditor.js: 'return' outside of function. (3244:0)
  3242 | );
  3243 |
> 3244 | return (
       | ^
  3245 |   <div className="min-h-screen bg-white">
  3246 |     {/* Navbar */}
  3247 |     <div className="bg-[#0F1A21] text-white p-4">
    at parser.next (<anonymous>)
    at normalizeFile.next (<anonymous>)
    at run.next (<anonymous>)
    at transform.next (<anonymous>)
ERROR in ./src/components/TracklessVideoEditor.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: D:\Projects\trackless-video\neurobrand-trackless\src\components\TracklessVideoEditor.js: 'return' outside of function. (3244:0)

  3242 | );
  3243 |
> 3244 | return (
       | ^
  3245 |   <div className="min-h-screen bg-white">
  3246 |     {/* Navbar */}
  3247 |     <div className="bg-[#0F1A21] text-white p-4">
    at constructor (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:359:19)
    at FlowParserMixin.raise (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:3266:19)        
    at FlowParserMixin.parseReturnStatement (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12634:12)
    at FlowParserMixin.parseStatementContent (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12292:21)
    at FlowParserMixin.parseStatementLike (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12261:17)
    at FlowParserMixin.parseStatementLike (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:5054:24)
    at FlowParserMixin.parseModuleItem (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12238:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12814:36)
    at FlowParserMixin.parseBlockBody (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12807:10)
    at FlowParserMixin.parseProgram (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12135:10)    at FlowParserMixin.parseTopLevel (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:12125:25)
    at FlowParserMixin.parseTopLevel (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:5821:28)    at FlowParserMixin.parse (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:13933:10)       
    at parse (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\parser\lib\index.js:13967:38)
    at parser (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at step (D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:261:32)
    at D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:273:13
    at async.call.result.err.err (D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:223:11)
    at D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:189:28
    at D:\Projects\trackless-video\neurobrand-trackless\node_modules\@babel\core\lib\gensync-utils\async.js:67:7
    at D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:113:33
    at step (D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:287:14)
    at D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:273:13
    at async.call.result.err.err (D:\Projects\trackless-video\neurobrand-trackless\node_modules\gensync\index.js:223:11)

ERROR in [eslint]
src\components\TracklessVideoEditor.js
  Line 3244:  Parsing error: 'return' outside of function. (3244:0)

webpack compiled with 2 errors
One of your dependencies, babel-preset-react-app, is importing the
"@babel/plugin-proposal-private-property-in-object" package without
declaring it in its dependencies. This is currently working because
"@babel/plugin-proposal-private-property-in-object" is already in your
node_modules folder for unrelated reasons, but it may break at any time.

babel-preset-react-app is part of the create-react-app project, which
is not maintianed anymore. It is thus unlikely that this bug will
ever be fixed. Add "@babel/plugin-proposal-private-property-in-object" to
your devDependencies to work around this error. This will make this message
go away.